--- a/link.html
+++ b/link.html
@@ -1,5 +1,6 @@
-<tital>At Coder </tital>
+
 <a href ="https://github.com/Asg-1223/literacy">ホームへ</a>
 <head>
   <meta charset="UTF-8">
+  <title>At Coder </title>
 </head>
