--- a/photo.html
+++ b/photo.html
@@ -1,1 +1,1 @@
-<img src="photo.img" alt="教室の風景 写真CC BY-NC-SA 4.0に基づいてライセンスされています。©2 by A ">
+<img src="photo.jpg" alt="教室の風景 写真CC BY-NC-SA 4.0に基づいてライセンスされています。©2 by A ">
