--- a/Link.html
+++ b/Link.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head> 
+    <title>AtCoder</title>
+</head>
 <ol>
   <li>競技プログラムでよく使うアルゴリズム</li>
   <li>AtCoder　Biginers　Contest（ABC編）</li>
@@ -8,7 +13,3 @@
   <li>２分探索</li>
 </ul>
 <dl>
-  <dt>２分探索</dt>
-  <dd>計算量　O（log N）
-  </dd>
-</dl> 
