--- a/list.html
+++ b/list.html
@@ -13,7 +13,7 @@
   <li>２分探索</li>
 </ul>
 <dl>
-  <dt>2分探索</dt>
-  <dd>計算量　O（log N）
-  </dd>
-</dl> 
+  <dt>2分探索</dt> 
+  <dd>計算量　O（log N）</dd>
+<dd>xで単調増加（もしくは減少）関数ｆが定義されているときｆ(x)⁼tになるx∈ｘが保存するかを探索するアルゴリズムである。</dd>
+ </dl> 
