--- a/list.html
+++ b/list.html
@@ -15,5 +15,5 @@
 <dl>
   <dt>2分探索について</dt> 
   <dd>計算量　O（log N）</dd>
-<dd>xで単調増加（もしくは減少）関数ｆが定義されているときｆ(x)⁼tになるx∈ｘが保存するかを探索するアルゴリズムである。</dd>
+<dd>xで単調増加（もしくは減少）関数ｆが定義されているときｆ(x)⁼tになるx∈ｘが存在するかを探索するアルゴリズムである。</dd>
  </dl> 
