--- a/table.html
+++ b/table.html
@@ -1,10 +1,10 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ja">
 <head> 
     <title>アルゴリズム</title>
 </head>
 <body>
-    <h1>テーブルサンプル</h1>
+    <h1>アルゴリズムの計算量</h1>
 
     <table>
       <tr>
