--- a/table.html
+++ b/table.html
@@ -1,32 +1,16 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head> 
-    <title>アルゴリズム</title>
-</head>
-<body>
-    <h1>アルゴリズムの計算量</h1>
-
-    <table ='table.css'>
-      <tr>
-      <th>アルゴリズム名</th>
-      <th>平均計算量</th>
-      <th>備考</th>
-      </tr>
-      <tr>
-      <td>２分探索</td>
-      <td>O(log n)</td>
-      <td> </td>
-      </tr>
-      <tr>
-      <td>全探索</td>
-      <td>O（ｎ）</td>
-      <td> </td>
-      </tr>
-      <tr>
-      <th>高速フーリエ変換</th>
-      <td>O（N log N）</td>
-      <td> </td>
-      </tr>
-    </table>
-
-  </body>
+<table>
+<tbody>
+<tr>
+<th>果物</th>
+<th>野菜</th>
+</tr>
+<tr>
+<td>いちご</td>
+<td>トマト</td>
+</tr>
+<tr>
+<td>バナナ</td>
+<td>レタス</td>
+</tr>
+</tbody>
+</table>
