--- a/table.html
+++ b/table.html
@@ -5,8 +5,8 @@
 </head>
 <body>
     <h1>アルゴリズムの計算量</h1>
-
-    <table ='table.css'>
+　<a href= ='table.css'>
+    <table>
       <tr>
       <th>アルゴリズム名</th>
       <th>平均計算量</th>
