--- a/table.html
+++ b/table.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>アルゴリズムの計算量</h1>
-　<a href= ='table.css'>
+　< href= ='table.css'>
     <table>
       <tr>
       <th>アルゴリズム名</th>
